--- a/style.css
+++ b/style.css
@@ -4282,7 +4282,7 @@ body.stretched .container-fullwidth .breadcrumb {
 
 #page-title.page-title-parallax {
     background-color: transparent;
-    background-image: url('images/parallax/parallax-bg.jpg');
+    background-image: url('images/parallax/parallax-bg.JPG');
     background-attachment: fixed;
     background-position: 50% 0;
     background-repeat: no-repeat;
