--- a/style.css
+++ b/style.css
@@ -16437,11 +16437,13 @@ a.listlarge:hover {
 .rowtitle {
     font-weight: 900;
     font-size: 16px;
+    color: #252525;
 }
 
 .rowprop {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 14px
+    color: #d4d4d4;
 }
 
 .listbold {
